# linguatube

./: .env-example  .gitignore  Dockerfile  README.md  pyproject.toml
app/: server.py
app/core/: __init__.py  chat_agent.py  chat_model.py  connection_pool.py  db_client.py  db_config.py  embedding.py  logging_config.py  vectorstore.py
app/models/: __init__.py  message_model.py  thread_model.py  transcript_model.py  video_model.py  word_model.py
app/routers/: document.py  item.py  message.py  scrap_youtube.py  thread-leg.py  thread.py  transcript.py  video.py  word.py
app/service/: __init__.py  find_all_video.py  find_message_history.py  find_transcript_by_video_id.py  find_video_by_id.py  insert_document.py  insert_message.py  insert_thread.py  insert_transcript.py  insert_video.py  list_message.py  list_thread.py  similarity_search_document.py
app/tests/: create_message.test.py  create_transcript.test.py  create_video.test.py  get_message_history.test.py  get_video_by_id.test.py
app/utils/: __init__.py  preprocess_text.py  random.py  scrap_youtube_metadata.py  scrap_youtube_transcript.py  serialize_message.py
app/utils/prompts/: __init__.py  translation_prompt.py  word_info_prompt.py
notebooks/: agent.ipynb  assistant_agentic_rag.ipynb  langgraph_agentic_rag(1).ipynb  message.ipynb  quick_dictionary.ipynb  scrap_youtube.ipynb  supabase.ipynb  youtube_transcipt.ipynb
notebooks/.ipynb_checkpoints/: agent-checkpoint.ipynb
tests/: create_message.test.py  create_transcript.test.py  create_video.test.py  get_message_history.test.py  get_video_by_id.test.py
